--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "dd94973f",
    "metadata": {},
    "outputs": [],
@@ -13,30 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a0918402",
    "metadata": {},
    "outputs": [],
    "source": [
     "def background(video_path, max_frames=300, step=3):\n",
     "    \"\"\"\n",
-    "    Calcula o background como média de até `max_frames` frames amostrados a cada `step` frames.\n",
+    "    Calcula o background como média de até 'max_frames' frames amostrados a cada 'step' frames.\n",
     "\n",
-    "    Parâmetros:\n",
-    "    - video_path (str): caminho do vídeo.\n",
+    "    Args:\n",
+    "    - video_path (str): diretoria do vídeo.\n",
     "    - max_frames (int): número máximo de frames a acumular.\n",
-    "    - step (int): amostragem (ex.: step=3 pega 1 a cada 3 frames).\n",
-    "\n",
-    "    Retorno:\n",
+    "    - step (int): amostragem (ex.: step=3 utiliza 1 a cada 3 frames).\n",
+    "    Returns:\n",
     "    - numpy.ndarray: imagem do background (dtype uint8, formato BGR).\n",
-    "\n",
-    "    Lança:\n",
-    "    - IOError se o vídeo não puder ser aberto.\n",
-    "    - ValueError se nenhum frame válido for lido.\n",
     "    \"\"\"\n",
     "    cap = cv.VideoCapture(video_path)\n",
-    "    if not cap.isOpened():\n",
-    "        raise IOError(f\"Cannot open video: {video_path}\")\n",
     "\n",
     "    count = 0\n",
     "    avg = None\n",
@@ -50,7 +43,6 @@
     "        if frame_index % step != 0:\n",
     "            frame_index += 1\n",
     "            continue\n",
-    "\n",
     "        frame_index += 1\n",
     "        frame_f = frame.astype(np.float64)\n",
     "\n",
@@ -58,28 +50,20 @@
     "            avg = frame_f\n",
     "        else:\n",
     "            avg += frame_f\n",
-    "\n",
     "        count += 1\n",
     "\n",
     "    cap.release()\n",
-    "\n",
-    "    if count == 0:\n",
-    "        raise ValueError(\"No frames were read from the video to compute background.\")\n",
-    "\n",
     "    return (avg / count).astype(np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "5ff32401",
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect_cars(frame, background_blur, mask_roi):\n",
-    "    \"\"\"\n",
-    "    Recebe um frame e devolve bounding boxes detectados dentro da ROI.\n",
-    "    \"\"\"\n",
     "    # pré-processamento\n",
     "    frame_blur = cv.GaussianBlur(frame, (21, 21), 0)\n",
     "    diff = cv.absdiff(frame_blur, background_blur)\n",
@@ -112,20 +96,20 @@
     "\n",
     "        boxes.append((x, y, w, h))\n",
     "\n",
-    "    return boxes\n"
+    "    return boxes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6923495d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_cars(video_path, output_path, roi_polygon):\n",
     "    # background\n",
-    "    background = background(video_path)\n",
-    "    background_blur = cv.GaussianBlur(background, (21, 21), 0)\n",
+    "    bg = background(video_path)\n",
+    "    background_blur = cv.GaussianBlur(bg, (21, 21), 0)\n",
     "\n",
     "    cap = cv.VideoCapture(video_path)\n",
     "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
@@ -195,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "e19618c2",
    "metadata": {},
    "outputs": [
