--- a/src/Ricardo.ipynb
+++ b/src/Ricardo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "95687a4c",
    "metadata": {},
    "outputs": [],
@@ -13,15 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cb1be110",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def background(video_path, max_frames=300, step=3):\n",
+    "    \"\"\"\n",
+    "    Calcula o background como média de até 'max_frames' frames amostrados a cada 'step' frames.\n",
     "\n",
-    "# --- Função para calcular o background médio ---\n",
-    "def avg_frame(video_path, max_frames=300, step=3):\n",
+    "    Args:\n",
+    "    - video_path (str): diretoria do vídeo.\n",
+    "    - max_frames (int): número máximo de frames a acumular.\n",
+    "    - step (int): amostragem (ex.: step=3 utiliza 1 a cada 3 frames).\n",
+    "    Returns:\n",
+    "    - numpy.ndarray: imagem do background (dtype uint8, formato BGR).\n",
+    "    \"\"\"\n",
     "    cap = cv.VideoCapture(video_path)\n",
+    "\n",
     "    count = 0\n",
     "    avg = None\n",
     "    frame_index = 0\n",
@@ -34,34 +43,38 @@
     "        if frame_index % step != 0:\n",
     "            frame_index += 1\n",
     "            continue\n",
-    "\n",
     "        frame_index += 1\n",
-    "        frame_f = frame.astype(np.float32)\n",
+    "        frame_f = frame.astype(np.float64)\n",
     "\n",
     "        if avg is None:\n",
     "            avg = frame_f\n",
     "        else:\n",
     "            avg += frame_f\n",
-    "\n",
     "        count += 1\n",
     "\n",
     "    cap.release()\n",
-    "\n",
-    "    if count == 0:\n",
-    "        raise Exception(f\"ERROR: No frames loaded from video: {video_path}\")\n",
-    "\n",
-    "    return (avg / count).astype(np.uint8)\n"
+    "    return (avg / count).astype(np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f0263ed6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Função para detectar carros ---\n",
     "def detect_cars(frame, background_blur, mask_roi):\n",
+    "    \"\"\"\n",
+    "    Deteta veículos no frame comparando com o background e aplicando a máscara ROI.\n",
+    "    Usa diferença absoluta, binarização por Otsu e operações morfológicas para limpar o resultado, \n",
+    "    em seguida extrai contornos e retorna bounding boxes filtradas.\n",
+    "    Args:\n",
+    "        frame (numpy.ndarray): frame atual em BGR.\n",
+    "        background_blur (numpy.ndarray): imagem de background suavizada (BGR).\n",
+    "        mask_roi (numpy.ndarray): máscara binária (uint8) com a ROI preenchida (255 dentro).\n",
+    "    Returns:\n",
+    "        list of tuples (x, y, w, h): bounding boxes aprovadas (inteiros).\n",
+    "    \"\"\"\n",
     "    frame_blur = cv.GaussianBlur(frame, (21, 21), 0)\n",
     "    diff = cv.absdiff(frame_blur, background_blur)\n",
     "    gray = cv.cvtColor(diff, cv.COLOR_BGR2GRAY)\n",
@@ -92,12 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a3571cef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Função para calcular velocidade ---\n",
     "def calculate_speed(prev_pos, curr_pos, fps, meters_per_pixel=0.25):\n",
     "    px, py = prev_pos\n",
     "    cx, cy = curr_pos\n",
@@ -110,15 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fface14e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Função principal com tracking e velocidade ---\n",
     "def count_cars_with_speed(video_path, output_path, roi_polygon, meters_per_pixel=0.25):\n",
-    "    background = avg_frame(video_path)\n",
-    "    background_blur = cv.GaussianBlur(background, (21, 21), 0)\n",
+    "    bg = background(video_path)\n",
+    "    background_blur = cv.GaussianBlur(bg, (21, 21), 0)\n",
     "\n",
     "    cap = cv.VideoCapture(video_path)\n",
     "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
@@ -206,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "5c7e9847",
    "metadata": {},
    "outputs": [
@@ -255,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
