--- a/src/Ricardo.ipynb
+++ b/src/Ricardo.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_cars(frame, background_blur, mask_roi):\n",
+    "def detect(frame, background_blur, mask_roi):\n",
     "    \"\"\"\n",
     "    Deteta veículos no frame comparando com o background e aplicando a máscara ROI.\n",
     "    Usa diferença absoluta, binarização por Otsu e operações morfológicas para limpar o resultado, \n",
@@ -110,14 +110,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_speed(prev_pos, curr_pos, fps, meters_per_pixel=0.25):\n",
+    "def calc_speed(prev_pos, curr_pos, fps, meters_per_pixel=0.25):\n",
+    "    \"\"\"\n",
+    "    Calcula a velocidade (km/h) entre duas posições de centroid entre frames.\n",
+    "    Args:\n",
+    "        prev_pos (tuple): (x, y) do centroid no frame anterior.\n",
+    "        curr_pos (tuple): (x, y) do centroid no frame atual.\n",
+    "        fps (float): frames por segundo do vídeo.\n",
+    "        meters_per_pixel (float): conversão de pixels para metros.\n",
+    "    Returns:\n",
+    "        float: velocidade estimada em km/h. Retorna 0.0 se fps ou meters_per_pixel forem inválidos.\n",
+    "    \"\"\"\n",
+    "    if fps <= 0 or meters_per_pixel <= 0:\n",
+    "        return 0.0\n",
+    "\n",
     "    px, py = prev_pos\n",
     "    cx, cy = curr_pos\n",
-    "    distance_pixels = np.sqrt((cx - px) ** 2 + (cy - py) ** 2)\n",
+    "    distance_pixels = np.hypot(cx - px, cy - py)\n",
     "    distance_m = distance_pixels * meters_per_pixel\n",
     "    speed_m_per_s = distance_m * fps\n",
     "    speed_kmh = speed_m_per_s * 3.6\n",
-    "    return speed_kmh"
+    "    return float(speed_kmh)"
    ]
   },
   {
@@ -152,7 +165,7 @@
     "        if not ret:\n",
     "            break\n",
     "\n",
-    "        boxes = detect_cars(frame, background_blur, mask_roi)\n",
+    "        boxes = detect(frame, background_blur, mask_roi)\n",
     "        new_centroids = {}\n",
     "\n",
     "        for (x, y, w2, h2) in boxes:\n",
@@ -178,7 +191,7 @@
     "\n",
     "            # Calcular velocidade só se o carro existe há mais de 1 frame\n",
     "            if assigned_id in prev_centroids and car_age[assigned_id] > 1:\n",
-    "                speed = calculate_speed(prev_centroids[assigned_id], (cx, cy), fps, meters_per_pixel)\n",
+    "                speed = calc_speed(prev_centroids[assigned_id], (cx, cy), fps, meters_per_pixel)\n",
     "            else:\n",
     "                speed = 0.0\n",
     "\n",
@@ -210,14 +223,12 @@
     "\n",
     "    print(\"Done! Cars counted:\", next_id-1)\n",
     "    for car_id, speed in car_speeds.items():\n",
-    "        print(f\"Car {car_id}: {speed:.1f} km/h\")\n",
-    "\n",
-    "\n"
+    "        print(f\"Car {car_id}: {speed:.1f} km/h\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5c7e9847",
    "metadata": {},
    "outputs": [
@@ -242,7 +253,6 @@
     }
    ],
    "source": [
-    "# --- USO ---\n",
     "video_path = \"resources/AutoEstrada.avi\"\n",
     "\n",
     "roi_polygon = np.array([\n",
