--- a/src/Ricardo.ipynb
+++ b/src/Ricardo.ipynb
@@ -140,7 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_cars_with_speed(video_path, output_path, roi_polygon, meters_per_pixel=0.25):\n",
+    "def count(video_path, output_path, roi_polygon, meters_per_pixel=0.25):\n",
+    "    \"\"\"\n",
+    "    Conta veículos numa região de interesse (ROI), estima a velocidade de cada veículo\n",
+    "    e grava um vídeo de saída com bounding boxes, IDs e velocidades.\n",
+    "    Args:\n",
+    "        video_path (str): diretoria do vídeo de entrada.\n",
+    "        output_path (str): diretoria do vídeo de saída (mp4).\n",
+    "        roi_polygon (np.ndarray): polígono da ROI no formato Nx2 (inteiros).\n",
+    "        meters_per_pixel (float): conversão de pixels para metros (padrão 0.25).\n",
+    "    \"\"\"\n",
     "    bg = background(video_path)\n",
     "    background_blur = cv.GaussianBlur(bg, (21, 21), 0)\n",
     "\n",
@@ -148,11 +157,15 @@
     "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
     "    h = int(cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
     "    fps = cap.get(cv.CAP_PROP_FPS)\n",
+    "    if fps <= 0:\n",
+    "        fps = 30.0  # fallback razoável caso FPS não seja lido\n",
     "\n",
     "    mask_roi = np.zeros((h, w), dtype=np.uint8)\n",
     "    cv.fillPoly(mask_roi, [roi_polygon], 255)\n",
     "\n",
     "    out = cv.VideoWriter(output_path, cv.VideoWriter_fourcc(*\"mp4v\"), fps, (w, h))\n",
+    "    if not out.isOpened():\n",
+    "        raise IOError(f\"Não foi possível abrir VideoWriter para '{output_path}'\")\n",
     "\n",
     "    prev_centroids = {}\n",
     "    next_id = 1\n",
@@ -262,16 +275,8 @@
     "    [5, 240]\n",
     "], dtype=np.int32)\n",
     "\n",
-    "count_cars_with_speed(video_path, \"cars_counted_speed.mp4\", roi_polygon)"
+    "count(video_path, \"cars_counted_speed.mp4\", roi_polygon)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17d7238f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
