--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3921443",
+   "id": "1251c234",
    "metadata": {},
    "source": [
     "#### *ISEL - DEI - LEIM*\n",
@@ -19,60 +19,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1a9256d7",
+   "execution_count": 7,
+   "id": "95687a4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from lib.pipeline import Pipeline"
+    "import cv2 as cv\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e784dc23",
+   "execution_count": null,
+   "id": "cb1be110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def background(video_path, max_frames=300, step=3):\n",
+    "    \"\"\"\n",
+    "    Calcula o background como média de até 'max_frames' frames amostrados a cada 'step' frames.\n",
+    "\n",
+    "    Args:\n",
+    "    - video_path (str): diretoria do vídeo.\n",
+    "    - max_frames (int): número máximo de frames a acumular.\n",
+    "    - step (int): amostragem (ex.: step=3 utiliza 1 a cada 3 frames).\n",
+    "    Returns:\n",
+    "    - numpy.ndarray: imagem do background (dtype uint8, formato BGR).\n",
+    "    \"\"\"\n",
+    "    cap = cv.VideoCapture(video_path)\n",
+    "\n",
+    "    count = 0\n",
+    "    avg = None\n",
+    "    frame_index = 0\n",
+    "\n",
+    "    while count < max_frames:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "\n",
+    "        if frame_index % step != 0:\n",
+    "            frame_index += 1\n",
+    "            continue\n",
+    "        frame_index += 1\n",
+    "        frame_f = frame.astype(np.float64)\n",
+    "\n",
+    "        if avg is None:\n",
+    "            avg = frame_f\n",
+    "        else:\n",
+    "            avg += frame_f\n",
+    "        count += 1\n",
+    "\n",
+    "    cap.release()\n",
+    "    return (avg / count).astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0263ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect(frame, background_blur, mask_roi):\n",
+    "    \"\"\"\n",
+    "    Deteta veículos no frame comparando com o background e aplicando a máscara ROI.\n",
+    "    Usa diferença absoluta, binarização por Otsu e operações morfológicas para limpar o resultado, \n",
+    "    em seguida extrai contornos e retorna bounding boxes filtradas.\n",
+    "    Args:\n",
+    "        frame (numpy.ndarray): frame atual em BGR.\n",
+    "        background_blur (numpy.ndarray): imagem de background suavizada (BGR).\n",
+    "        mask_roi (numpy.ndarray): máscara binária (uint8) com a ROI preenchida (255 dentro).\n",
+    "    Returns:\n",
+    "        list of tuples (x, y, w, h): bounding boxes aprovadas (inteiros).\n",
+    "    \"\"\"\n",
+    "    frame_blur = cv.GaussianBlur(frame, (21, 21), 0)\n",
+    "    diff = cv.absdiff(frame_blur, background_blur)\n",
+    "    gray = cv.cvtColor(diff, cv.COLOR_BGR2GRAY)\n",
+    "    masked = cv.bitwise_and(gray, mask_roi)\n",
+    "    _, thresh = cv.threshold(masked, 0, 255, cv.THRESH_BINARY + cv.THRESH_OTSU)\n",
+    "\n",
+    "    kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE, (7, 7))\n",
+    "    cleaned = cv.morphologyEx(thresh, cv.MORPH_CLOSE, kernel, iterations=2)\n",
+    "    cleaned = cv.morphologyEx(cleaned, cv.MORPH_OPEN, kernel, iterations=1)\n",
+    "\n",
+    "    contours, _ = cv.findContours(cleaned, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "    boxes = []\n",
+    "\n",
+    "    for cnt in contours:\n",
+    "        area = cv.contourArea(cnt)\n",
+    "        if area < 800 or area > 10000:  # filtrar objetos muito pequenos ou muito grandes\n",
+    "            continue\n",
+    "\n",
+    "        x, y, w, h = cv.boundingRect(cnt)\n",
+    "        ratio = w / float(h)\n",
+    "        if ratio < 0.3 or ratio > 3:  # filtrar objetos estreitos ou largos\n",
+    "            continue\n",
+    "\n",
+    "        boxes.append((x, y, w, h))\n",
+    "\n",
+    "    return boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3571cef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_speed(prev_pos, curr_pos, fps, meters_per_pixel=0.25):\n",
+    "    \"\"\"\n",
+    "    Calcula a velocidade (km/h) entre duas posições de centroid entre frames.\n",
+    "    Args:\n",
+    "        prev_pos (tuple): (x, y) do centroid no frame anterior.\n",
+    "        curr_pos (tuple): (x, y) do centroid no frame atual.\n",
+    "        fps (float): frames por segundo do vídeo.\n",
+    "        meters_per_pixel (float): conversão de pixels para metros.\n",
+    "    Returns:\n",
+    "        float: velocidade estimada em km/h. Retorna 0.0 se fps ou meters_per_pixel forem inválidos.\n",
+    "    \"\"\"\n",
+    "    if fps <= 0 or meters_per_pixel <= 0:\n",
+    "        return 0.0\n",
+    "\n",
+    "    px, py = prev_pos\n",
+    "    cx, cy = curr_pos\n",
+    "    distance_pixels = np.hypot(cx - px, cy - py)\n",
+    "    distance_m = distance_pixels * meters_per_pixel\n",
+    "    speed_m_per_s = distance_m * fps\n",
+    "    speed_kmh = speed_m_per_s * 3.6\n",
+    "    return float(speed_kmh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fface14e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count(video_path, output_path, roi_polygon, meters_per_pixel=0.25):\n",
+    "    \"\"\"\n",
+    "    Conta veículos numa região de interesse (ROI), estima a velocidade de cada veículo\n",
+    "    e grava um vídeo de saída com bounding boxes, IDs e velocidades.\n",
+    "    Args:\n",
+    "        video_path (str): diretoria do vídeo de entrada.\n",
+    "        output_path (str): diretoria do vídeo de saída (mp4).\n",
+    "        roi_polygon (np.ndarray): polígono da ROI no formato Nx2 (inteiros).\n",
+    "        meters_per_pixel (float): conversão de pixels para metros (padrão 0.25).\n",
+    "    \"\"\"\n",
+    "    bg = background(video_path)\n",
+    "    background_blur = cv.GaussianBlur(bg, (21, 21), 0)\n",
+    "\n",
+    "    cap = cv.VideoCapture(video_path)\n",
+    "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
+    "    h = int(cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
+    "    fps = cap.get(cv.CAP_PROP_FPS)\n",
+    "    if fps <= 0:\n",
+    "        fps = 30.0  # fallback razoável caso FPS não seja lido\n",
+    "\n",
+    "    mask_roi = np.zeros((h, w), dtype=np.uint8)\n",
+    "    cv.fillPoly(mask_roi, [roi_polygon], 255)\n",
+    "\n",
+    "    out = cv.VideoWriter(output_path, cv.VideoWriter_fourcc(*\"mp4v\"), fps, (w, h))\n",
+    "    if not out.isOpened():\n",
+    "        raise IOError(f\"Não foi possível abrir VideoWriter para '{output_path}'\")\n",
+    "\n",
+    "    prev_centroids = {}\n",
+    "    next_id = 1\n",
+    "    car_speeds = {}\n",
+    "    car_age = {}\n",
+    "    car_speeds_history = {}\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "\n",
+    "        boxes = detect(frame, background_blur, mask_roi)\n",
+    "        new_centroids = {}\n",
+    "\n",
+    "        for (x, y, w2, h2) in boxes:\n",
+    "            cx = x + w2 // 2\n",
+    "            cy = y + h2 // 2\n",
+    "\n",
+    "            assigned_id = None\n",
+    "            for obj_id, (px, py) in prev_centroids.items():\n",
+    "                if abs(cx - px) < 30 and abs(cy - py) < 40:\n",
+    "                    assigned_id = obj_id\n",
+    "                    break\n",
+    "\n",
+    "            if assigned_id is None:\n",
+    "                assigned_id = next_id\n",
+    "                next_id += 1\n",
+    "\n",
+    "            new_centroids[assigned_id] = (cx, cy)\n",
+    "\n",
+    "            # Atualizar idade e histórico\n",
+    "            car_age[assigned_id] = car_age.get(assigned_id, 0) + 1\n",
+    "            if assigned_id not in car_speeds_history:\n",
+    "                car_speeds_history[assigned_id] = []\n",
+    "\n",
+    "            # Calcular velocidade só se o carro existe há mais de 1 frame\n",
+    "            if assigned_id in prev_centroids and car_age[assigned_id] > 1:\n",
+    "                speed = calc_speed(prev_centroids[assigned_id], (cx, cy), fps, meters_per_pixel)\n",
+    "            else:\n",
+    "                speed = 0.0\n",
+    "\n",
+    "            car_speeds_history[assigned_id].append(speed)\n",
+    "            # Média móvel das últimas 3 velocidades\n",
+    "            speed_avg = np.mean(car_speeds_history[assigned_id][-3:])\n",
+    "            car_speeds[assigned_id] = speed_avg\n",
+    "\n",
+    "            # Desenhar bounding box e velocidade\n",
+    "            cv.rectangle(frame, (x, y), (x+w2, y+h2), (0, 255, 0), 2)\n",
+    "            cv.putText(frame, f\"ID:{assigned_id}\", (x, y-20), cv.FONT_HERSHEY_SIMPLEX, 0.5, (0,255,0), 1)\n",
+    "            cv.putText(frame, f\"{speed_avg:.1f} km/h\", (x, y-5), cv.FONT_HERSHEY_SIMPLEX, 0.5, (0,255,255), 1)\n",
+    "\n",
+    "        # Remover carros que desapareceram\n",
+    "        prev_centroids = new_centroids.copy()\n",
+    "        car_age = {cid: car_age[cid] for cid in prev_centroids.keys()}\n",
+    "        car_speeds_history = {cid: car_speeds_history[cid] for cid in prev_centroids.keys()}\n",
+    "\n",
+    "        cv.polylines(frame, [roi_polygon], True, (255, 0, 0), 2)\n",
+    "        out.write(frame)\n",
+    "        cv.imshow(\"Car Counting & Speed\", frame)\n",
+    "\n",
+    "        if cv.waitKey(1) & 0xFF == 27:\n",
+    "            break\n",
+    "\n",
+    "    cap.release()\n",
+    "    out.release()\n",
+    "    cv.destroyAllWindows()\n",
+    "\n",
+    "    print(\"Done! Cars counted:\", next_id-1)\n",
+    "    for car_id, speed in car_speeds.items():\n",
+    "        print(f\"Car {car_id}: {speed:.1f} km/h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c7e9847",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Construindo background...\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.11.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:230: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'cv::binary_op'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 16\u001b[0m\n\u001b[0;32m      1\u001b[0m roi_polygon \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\n\u001b[0;32m      2\u001b[0m     [\u001b[38;5;241m95\u001b[39m, \u001b[38;5;241m85\u001b[39m],    \u001b[38;5;66;03m# Canto Superior Esquerdo\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     [\u001b[38;5;241m160\u001b[39m, \u001b[38;5;241m85\u001b[39m],    \u001b[38;5;66;03m# Canto Superior Direito\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     [\u001b[38;5;241m225\u001b[39m, \u001b[38;5;241m240\u001b[39m],   \u001b[38;5;66;03m# Canto Inferior Direito\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m240\u001b[39m]      \u001b[38;5;66;03m# Canto Inferior Esquerdo\u001b[39;00m\n\u001b[0;32m      6\u001b[0m ], dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mint32)\n\u001b[0;32m      8\u001b[0m pipeline \u001b[38;5;241m=\u001b[39m Pipeline(\n\u001b[0;32m      9\u001b[0m     input_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresources/AutoEstrada.avi\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m     output_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcars_detected.mp4\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     13\u001b[0m     min_area\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m\n\u001b[0;32m     14\u001b[0m )\n\u001b[1;32m---> 16\u001b[0m \u001b[43mpipeline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\pipeline.py:105\u001b[0m, in \u001b[0;36mPipeline.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    102\u001b[0m     cropped \u001b[38;5;241m=\u001b[39m frame\n\u001b[0;32m    103\u001b[0m     roi_mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m--> 105\u001b[0m detections \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    107\u001b[0m \u001b[38;5;66;03m# convert detections coords back to full frame\u001b[39;00m\n\u001b[0;32m    108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m roi_bbox \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\motion.py:93\u001b[0m, in \u001b[0;36mMotionDetector.detect\u001b[1;34m(self, frame)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdetect\u001b[39m(\u001b[38;5;28mself\u001b[39m, frame):\n\u001b[0;32m     89\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     90\u001b[0m \u001b[38;5;124;03m    Detecta regiões de movimento num único frame.\u001b[39;00m\n\u001b[0;32m     91\u001b[0m \u001b[38;5;124;03m    Retorna contornos e bounding boxes.\u001b[39;00m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 93\u001b[0m     frame_proc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_apply_roi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     95\u001b[0m     \u001b[38;5;66;03m# inicializa background no MESMO TAMANHO e FORMATO do frame_proc\u001b[39;00m\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackground \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\motion.py:27\u001b[0m, in \u001b[0;36mMotionDetector._apply_roi\u001b[1;34m(self, frame)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroi_mask \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m frame\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbitwise_and\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mroi_mask\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.11.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:230: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'cv::binary_op'\n"
+      "Done! Cars counted: 12\n",
+      "Car 1: 97.7 km/h\n",
+      "Car 2: 106.2 km/h\n",
+      "Car 3: 97.9 km/h\n",
+      "Car 4: 102.1 km/h\n",
+      "Car 5: 99.4 km/h\n",
+      "Car 6: 101.0 km/h\n",
+      "Car 7: 72.8 km/h\n",
+      "Car 8: 175.2 km/h\n",
+      "Car 9: 79.1 km/h\n",
+      "Car 10: 202.7 km/h\n",
+      "Car 11: 0.0 km/h\n",
+      "Car 12: 148.3 km/h\n"
      ]
     }
    ],
    "source": [
+    "video_path = \"resources/AutoEstrada.avi\"\n",
+    "\n",
     "roi_polygon = np.array([\n",
-    "    [95, 85],    # Canto Superior Esquerdo\n",
-    "    [160, 85],    # Canto Superior Direito\n",
-    "    [225, 240],   # Canto Inferior Direito\n",
-    "    [5, 240]      # Canto Inferior Esquerdo\n",
+    "    [100, 70],\n",
+    "    [155, 70],\n",
+    "    [230, 240],\n",
+    "    [5, 240]\n",
     "], dtype=np.int32)\n",
     "\n",
-    "pipeline = Pipeline(\n",
-    "    input_path=\"resources/AutoEstrada.avi\",\n",
-    "    output_path=\"cars_detected.mp4\",\n",
-    "    roi_polygon=roi_polygon,\n",
-    "    m_per_px=0.02,\n",
-    "    min_area=500\n",
-    ")\n",
-    "\n",
-    "pipeline.run()"
+    "count(video_path, \"cars_counted_speed.mp4\", roi_polygon)"
    ]
   }
  ],
