--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "95687a4c",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cb1be110",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0263ed6",
    "metadata": {},
    "outputs": [],
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a3571cef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_speed(prev_pos, curr_pos, fps, meters_per_pixel=0.25):\n",
+    "def calc_speed(prev_pos, curr_pos, fps, meters_per_pixel=0.15):\n",
     "    \"\"\"\n",
-    "    Calcula a velocidade (km/h) entre duas posições de centroid entre frames.\n",
+    "    Calcula a velocidade (km/h) entre duas posições de centroid, entre frames.\n",
     "    Args:\n",
     "        prev_pos (tuple): (x, y) do centroid no frame anterior.\n",
     "        curr_pos (tuple): (x, y) do centroid no frame atual.\n",
@@ -152,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fface14e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count(video_path, output_path, roi_polygon, meters_per_pixel=0.25):\n",
+    "def count(video_path, output_path, roi_polygon, meters_per_pixel=0.15):\n",
     "    \"\"\"\n",
     "    Conta veículos numa região de interesse (ROI), estima a velocidade de cada veículo\n",
     "    e grava um vídeo de saída com bounding boxes, IDs e velocidades.\n",
@@ -165,7 +165,7 @@
     "        video_path (str): diretoria do vídeo de entrada.\n",
     "        output_path (str): diretoria do vídeo de saída (mp4).\n",
     "        roi_polygon (np.ndarray): polígono da ROI no formato Nx2 (inteiros).\n",
-    "        meters_per_pixel (float): conversão de pixels para metros (padrão 0.25).\n",
+    "        meters_per_pixel (float): conversão de pixeís para metros (padrão 0.15).\n",
     "    \"\"\"\n",
     "    bg = background(video_path)\n",
     "    background_blur = cv.GaussianBlur(bg, (21, 21), 0)\n",
@@ -174,15 +174,11 @@
     "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
     "    h = int(cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
     "    fps = cap.get(cv.CAP_PROP_FPS)\n",
-    "    if fps <= 0:\n",
-    "        fps = 30.0  # fallback razoável caso FPS não seja lido\n",
     "\n",
     "    mask_roi = np.zeros((h, w), dtype=np.uint8)\n",
     "    cv.fillPoly(mask_roi, [roi_polygon], 255)\n",
     "\n",
     "    out = cv.VideoWriter(output_path, cv.VideoWriter_fourcc(*\"mp4v\"), fps, (w, h))\n",
-    "    if not out.isOpened():\n",
-    "        raise IOError(f\"Não foi possível abrir VideoWriter para '{output_path}'\")\n",
     "\n",
     "    prev_centroids = {}\n",
     "    next_id = 1\n",
@@ -242,7 +238,7 @@
     "\n",
     "        cv.polylines(frame, [roi_polygon], True, (255, 0, 0), 2)\n",
     "        out.write(frame)\n",
-    "        cv.imshow(\"Car Counting & Speed\", frame)\n",
+    "        cv.imshow(\"Contagem de Veículos\", frame)\n",
     "\n",
     "        if cv.waitKey(1) & 0xFF == 27:\n",
     "            break\n",
@@ -251,14 +247,14 @@
     "    out.release()\n",
     "    cv.destroyAllWindows()\n",
     "\n",
-    "    print(\"Done! Cars counted:\", next_id-1)\n",
+    "    print(\"Número de veículos detetados:\", next_id-1)\n",
     "    for car_id, speed in car_speeds.items():\n",
-    "        print(f\"Car {car_id}: {speed:.1f} km/h\")"
+    "        print(f\"Carro {car_id}: {speed:.1f} km/h\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5c7e9847",
    "metadata": {},
    "outputs": [
@@ -266,19 +262,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! Cars counted: 12\n",
-      "Car 1: 97.7 km/h\n",
-      "Car 2: 106.2 km/h\n",
-      "Car 3: 97.9 km/h\n",
-      "Car 4: 102.1 km/h\n",
-      "Car 5: 99.4 km/h\n",
-      "Car 6: 101.0 km/h\n",
-      "Car 7: 72.8 km/h\n",
-      "Car 8: 175.2 km/h\n",
-      "Car 9: 79.1 km/h\n",
-      "Car 10: 202.7 km/h\n",
-      "Car 11: 0.0 km/h\n",
-      "Car 12: 148.3 km/h\n"
+      "Número de veículos detetados: 12\n",
+      "Carro 1: 58.6 km/h\n",
+      "Carro 2: 63.7 km/h\n",
+      "Carro 3: 58.7 km/h\n",
+      "Carro 4: 61.3 km/h\n",
+      "Carro 5: 59.7 km/h\n",
+      "Carro 6: 60.6 km/h\n",
+      "Carro 7: 43.7 km/h\n",
+      "Carro 8: 105.1 km/h\n",
+      "Carro 9: 47.5 km/h\n",
+      "Carro 10: 121.6 km/h\n",
+      "Carro 11: 0.0 km/h\n",
+      "Carro 12: 89.0 km/h\n"
      ]
     }
    ],
